# original

./: .flake8  .gitignore  README.md  README.md.py  main.py  pyproject.toml  requirements.txt
data/: external_api.py
htmlcov/: .gitignore  class_index.html  function_index.html  index.html  status.json  z_145eef247bfb46b6___init___py.html  z_145eef247bfb46b6_generators_py.html  z_145eef247bfb46b6_masks_py.html  z_145eef247bfb46b6_processing_py.html  z_145eef247bfb46b6_widget_py.html
src/: decorators.py  external_api.py  file_reader.py  formatters.py  generators.py  masks.py  processing.py  reports.py  search.py  services.py  statistics.py  utils.py  views.py  widget.py
tests/: conftest.py  test_decorators.py  test_external_api.py  test_file_reader.py  test_formatters.py  test_generators.py  test_mask.py  test_processig.py  test_processing.py  test_reports.py  test_search.py  test_services.py  test_utils.py  test_views.py  test_widget.py
tests/tests/: test_file_reader.py
