[tool.poetry]
name = "pythonproject2"
version = "0.1.0"
description = "Учебный проект для обработки банковских данных"
authors = ["Your Name <you@example.com>"]
readme = "README.md"
packages = [{ include = "src" }]

[tool.poetry.dependencies]
python = ">=3.13"
python-dotenv = "^1.0.1"
pandas = "^2.3.2"
openpyxl = "^3.1.5"
requests = "^2.32.5"

[tool.poetry.group.lint.dependencies]
flake8 = "^7.3.0"
mypy = "^1.17.1"
isort = "^6.0.1"
black = "^25.1.0"

[tool.poetry.group.dev.dependencies]
mypy = "^1.18.2"
types-requests = "^2.32.4.20250913"

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 119
exclude = ".git"

[tool.isort]
line_length = 119

[tool.mypy]
disallow_untyped_defs = true
warn_return_any = true
exclude = "venv"
